add G1GC VM options with details